client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');



* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scrollbar-width: thin;
  scrollbar-color: #ffffff14 #00000000;

}

body {
  font-family: "Montserrat", sans-serif;
  background-color: #181e28;
}

a {
  color: inherit;
  text-decoration: none;
}

input:focus {
  outline: none !important;
  box-shadow: none !important;
}

button {
  cursor: pointer;
  background-color: transparent;
  border: none;
}

.animate-spin {
  animation: spin 1s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

